LRU adjust to no mem leaking